clean up and optimized

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </header>
 
   <main class="sr-box">
-    <div class="grow-2 blue">grow-2</div>
+    <div class="grow-2 blue text-ellipsis-2">grow-2 asdfjasdkl jkasdfjklsdaf adjfkdsjlfka ksadlfjklsadfjlsadasdkfj asdjfkladsjfk sadkjflsadjf asdfksadjfkl</div>
     <div class="grow-1 red">grow-1</div>
     <div class="grow-3 green">grow-3</div>
   </main>
