added elements and colors and clean up

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Serra Examples</title>
-  <style>
-    .blue{ background-color: blue; }
-    .red{ background-color: red; }
-    .green{ background-color: green; }
-  </style>
 </head>
 <body>
 
@@ -15,11 +10,15 @@
     Examples
   </header>
 
-  <main class="sr-box">
-    <div class="grow-2 blue text-ellipsis-2">grow-2 asdfjasdkl jkasdfjklsdaf adjfkdsjlfka ksadlfjklsadfjlsadasdkfj asdjfkladsjfk sadkjflsadjf asdfksadjfkl</div>
-    <div class="grow-1 red">grow-1</div>
-    <div class="grow-3 green">grow-3</div>
+  <main class="sr-box c-white">
+    <div class="grow-2 bc-blue text-ellipsis-2">grow-2 asdfjasdkl jkasdfjklsdaf adjfkdsjlfka ksadlfjklsadfjlsadasdkfj asdjfkladsjfk sadkjflsadjf asdfksadjfkl</div>
+    <div class="grow-1 bc-red">grow-1</div>
+    <div class="grow-3 bc-green">grow-4</div>
   </main>
+
+  <br>
+
+  <div class="sr-btn bc-violet">salam</div>
 
   <!-- built files will be auto injected -->
 
